# CertifyHub

./: README.md  pyproject.toml
src/scraper/: README.md  __init__.py  browser_utils.py  config.py  examtopics.py  examtopics_scraper.py  main.py  search_scraper.py  view_scraper.py
src/web/: server.py
